--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,18 +1,17 @@
  <div class="user-details">
-  <h1> My Expertise </h1>
+  <h1> About </h1>
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
+      <h2>Tools</h2>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p> Main tools I use in my verification projects, for proprietary and open.</p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
+      <h2>Methodologies</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
@@ -20,10 +19,10 @@
         Vinyl XOXO lumbersexual</p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
+      <h2>Languages</h2>
+      <img src="https://icon-icons.com/icons2/2107/PNG/72/file_type_light_systemverilog_icon_130431.png" alt="systemverilog">
+      <i class="devicon-python-plain"></i>
+      <i class="devicon-c-line-wordmark"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
