--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,14 +2,6 @@
   <h1> About </h1>
   <p> {{site.user_description}} </p>
 </div>
-  <div class="user">
-    <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p> Main tools I use in my verification projects, for proprietary and open.</p>
-    </div>
     <div class="tech">
       <h2>Methodologies</h2>
       <i class="devicon-javascript-plain colored"></i>
@@ -20,7 +12,7 @@
     </div>
     <div class="tech">
       <h2>Languages</h2>
-      <img src="https://icon-icons.com/icons2/2107/PNG/72/file_type_light_systemverilog_icon_130431.png" alt="systemverilog">
+      <img src="https://icon-icons.com/icons2/2107/PNG/72/file_type_light_systemverilog_icon_130431.png" alt="">
       <i class="devicon-python-plain"></i>
       <i class="devicon-c-line-wordmark"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
