--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,6 +2,7 @@
   <h1> About </h1>
   <p> {{site.user_description}} </p>
 </div>
+  <div class="user">
     <div class="tech">
       <h2>Methodologies</h2>
       <i class="devicon-javascript-plain colored"></i>
@@ -12,7 +13,7 @@
     </div>
     <div class="tech">
       <h2>Languages</h2>
-      <img src="https://icon-icons.com/icons2/2107/PNG/72/file_type_light_systemverilog_icon_130431.png" alt="">
+      <img src="" alt="SV">
       <i class="devicon-python-plain"></i>
       <i class="devicon-c-line-wordmark"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
