--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
     </div>
     <div class="tech">
       <h2>Languages</h2>
-      <img alt="systemverilog" src="{{ "/assets/img/sv.png" | prepend: site.baseurl }}" />
+      <img alt="systemverilog" src="{{ "/src/img/sv.png" | prepend: site.baseurl }}" />
       <i class="devicon-python-plain"></i>
       <i class="devicon-c-line-wordmark"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
