--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,8 +14,8 @@
     <div class="tech">
       <h2>Languages</h2>
       <img alt="systemverilog" src="{{ "/assets/img/sv.png" | prepend: site.baseurl }}" />
-      <i class="devicon-python-plain"></i>
-      <i class="devicon-c-line-wordmark"></i>
+      <i class="devicon-python-plain colored"></i>
+      <i class="devicon-c-line-wordmark colored"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
