--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,9 +5,8 @@
   <div class="user">
     <div class="tech">
       <h2>Methodologies</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
+      <img alt="UVM" src="{{ "/assets/img/UVM_logo.jpg" | prepend: site.baseurl }}" />
+      <i>cocoTB</i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
