--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
     <div class="tech">
       <h2>Methodologies</h2>
       <img alt="UVM" src="{{ "/assets/img/UVM_logo.jpg" | prepend: site.baseurl }}" />
-      <i>cocoTB</i>
+      <img alt="cocotb" src="{{ "/assets/img/cocotb.png" | prepend: site.baseurl }}" />
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
