Adjusts on about

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,15 +7,13 @@
       <h2>Methodologies</h2>
       <img alt="UVM" src="{{ "/assets/img/UVM_logo.jpg" | prepend: site.baseurl }}" />
       <img alt="cocotb" src="{{ "/assets/img/cocotb.png" | prepend: site.baseurl }}" />
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>Main methodologies I use in my verification projects</p>
     </div>
     <div class="tech">
       <h2>Languages</h2>
       <img alt="systemverilog" src="{{ "/assets/img/sv.png" | prepend: site.baseurl }}" />
       <i class="devicon-python-plain colored"></i>
       <i class="devicon-c-line-wordmark colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>Main languages ​​I use when building my verification environments</p>
     </div>
 </div>
