--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,6 +14,7 @@
       <img alt="systemverilog" src="{{ "/assets/img/sv.png" | prepend: site.baseurl }}" />
       <i class="devicon-python-plain colored"></i>
       <i class="devicon-c-line-wordmark colored"></i>
+      <i class="devicon-cplusplus-plain-wordmark colored"></i>
       <p>Main languages ​​I use when building my verification environments</p>
     </div>
 </div>
